<resources>
    <string name="app_name">BreatheSafe</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="get_location">Get Location</string>
    <string name="save">Save</string>
    <string name="first_day"></string>
    <string name="second_day"></string>
    <string name="third_day"></string>
    <string name="fourth_day"></string>
    <string name="name_hint">Name</string>
    <string name="air_today">Loading Data</string>
    <string name="forecast">Forecast</string>
    <string name="Hello">Hello</string>
    <string name="locationText">Your location is: Scanning...</string>
    <string-array name="conditions_array">
        <item>No Condition</item>
        <item>Older adult</item>
        <item>Child</item>
        <item>Asthma</item>
        <item>Allergy</item>
        <item>Heart Disease</item>
        <item>Lung Disease</item>
    </string-array>
</resources>