<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/constmaincolor"
    tools:context=".Forecast">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:rotationY="180"
            app:srcCompat="@drawable/breath"
            tools:srcCompat="@drawable/breath" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="256dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00EEF2F3"
            android:tint="#323232"
            app:srcCompat="@drawable/ic_baseline_home_48" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RelativeLayout
            android:id="@+id/accordion_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BFE355"
            android:clickable="true">

            <TextView
                android:id="@+id/accordion_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/first_day"
                android:textColor="#333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/down_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="expandableButton1"
                android:layout_margin="4dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            app:ael_duration="500"
            app:ael_expanded="false"
            app:ael_orientation="vertical">
            <TextView
                android:id="@+id/forecast_text1"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:padding="10dp"
                android:text="@string/fourth_day"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold" />
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>

        <!--Second day-->
        <RelativeLayout
            android:id="@+id/accordion_header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BFE355"
            android:clickable="true">

            <TextView
                android:id="@+id/accordion_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/second_day"
                android:textColor="#333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/down_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="expandableButton2"
                android:layout_margin="4dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            app:ael_duration="500"
            app:ael_expanded="false"
            app:ael_orientation="vertical">
            <TextView
                android:id="@+id/forecast_text2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:padding="10dp"
                android:text="@string/fourth_day"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>

        <!--Third day-->
        <RelativeLayout
            android:id="@+id/accordion_header3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BFE355"
            android:clickable="true">

            <TextView
                android:id="@+id/accordion_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/third_day"
                android:textColor="#333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/down_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="expandableButton3"
                android:layout_margin="4dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/content3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            app:ael_duration="500"
            app:ael_expanded="false"
            app:ael_orientation="vertical">
            <TextView
                android:id="@+id/forecast_text3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:padding="10dp"
                android:text="@string/fourth_day"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>

        <!--Fourth day-->
        <RelativeLayout
            android:id="@+id/accordion_header4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BFE355"
            android:clickable="true">

            <TextView
                android:id="@+id/accordion_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fourth_day"
                android:textColor="#333"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/down_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="expandableButton4"
                android:layout_margin="4dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
        </RelativeLayout>

        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/content4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            app:ael_duration="500"
            app:ael_expanded="false"
            app:ael_orientation="vertical">
            <TextView
                android:id="@+id/forecast_text4"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:padding="10dp"
                android:text="@string/fourth_day"
                android:textColor="#333"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content4" />
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forecast"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>